Bug 1068230 - Don't use the gfxContext transform in intermediate surface, r=seth