image/src/imgFrame.cpp
@@ -452,7 +452,7 @@ imgFrame::SurfaceForDrawing(bool               aDoPadding,
     } else {
       SurfacePattern pattern(aSurface,
                              ExtendMode::REPEAT,
-                             ToMatrix(aContext->CurrentMatrix()));
+                             Matrix::Translation(mDecoded.x, mDecoded.y));
       target->FillRect(ToRect(aRegion.Intersect(available).Rect()), pattern);
     }
 
